--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <div id="sidebar">
         <h1> Nomeyho </h1>
         <h4 class="subtitle"> Software engineer </h4>
-         <ul class="naviguation">
+        <ul class="naviguation">
             <li> 
                 <a href="index.html"> About </a> 
             </li>
@@ -41,29 +41,8 @@
         </div>
     </div>
     <div id="content">
-        <h1 class="page-title"> About me </h1>
-        <p>
-            I'm a software engineer from Belgium. I recently completed a
-            master degree  in Computer Science and Engineering at the 
-            <a href="https://www.ulg.ac.be/">University of Liège</a>.
-            I first studied general mathematics, physics and computer 
-            science. Then I focused on Computer systems and Networks. I'm fascinated 
-            by Web technologies in general (Javascript, HTML, CSS, NodeJS, D3). 
-            I also used to code in Java or C/C++.
-        </p>
-        <p>    
-            My Masters thesis was about <a href="https://www.ulgspectra.ulg.ac.be">ULgSpectra</a>,
-            a Web application to visualize and manage spectra obtained from spectroscopy
-            experiments. I developped a VueJS SPA, designed and implemented a RESTful API
-            in NodeJS and use a PostgreSQL database for this work. I spent 6 months studying
-            software engineering at the <a href="http://univaq.it/"> University of L'Aquila</a> 
-            in 2016 as part of an Erasmus program.
-        </p>
+        <h1 class="page-title"> Projects </h1>
 
-        <p>
-            Otherwise, I enjoy playing football, playing tennis, skying, 
-            learning philosophy of sciences and watching series.
-        </p>
     </div>
   </body>
 </html>
