--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <div id="sidebar">
         <h1> Nomeyho </h1>
         <h4 class="subtitle"> Software engineer </h4>
-         <ul class="naviguation">
+        <ul class="naviguation">
             <li> 
                 <a href="index.html"> About </a> 
             </li>
@@ -41,29 +41,27 @@
         </div>
     </div>
     <div id="content">
-        <h1 class="page-title"> About me </h1>
+        <h1 class="page-title"> Blog </h1>
+        <!--
+        <h5 class="page-subtitle"> 19 Feb 2017 </h5>
         <p>
-            I'm a software engineer from Belgium. I recently completed a
-            master degree  in Computer Science and Engineering at the 
-            <a href="https://www.ulg.ac.be/">University of Liège</a>.
-            I first studied general mathematics, physics and computer 
-            science. Then I focused on Computer systems and Networks. I'm fascinated 
-            by Web technologies in general (Javascript, HTML, CSS, NodeJS, D3). 
-            I also used to code in Java or C/C++.
-        </p>
-        <p>    
-            My Masters thesis was about <a href="https://www.ulgspectra.ulg.ac.be">ULgSpectra</a>,
-            a Web application to visualize and manage spectra obtained from spectroscopy
-            experiments. I developped a VueJS SPA, designed and implemented a RESTful API
-            in NodeJS and use a PostgreSQL database for this work. I spent 6 months studying
-            software engineering at the <a href="http://univaq.it/"> University of L'Aquila</a> 
-            in 2016 as part of an Erasmus program.
-        </p>
+            Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. 
+            Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent 
+            egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit 
+            sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia 
+            Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing 
+            ante non diam sodales hendrerit.
 
-        <p>
-            Otherwise, I enjoy playing football, playing tennis, skying, 
-            learning philosophy of sciences and watching series.
+            Ut velit mauris, egestas sed, gravida nec, ornare ut, mi.
+
+            <a href="">Aenean ut orci vel</a> massa suscipit pulvinar. Nulla sollicitudin. Fusce varius, ligula non 
+            tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae ligula. Pellentesque 
+            rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis metus 
+            vitae elit lobortis egestas. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi vel
+            erat non mauris convallis vehicula. Nulla et sapien. Integer tortor tellus, aliquam faucibus, 
+            convallis id, congue eu, quam. Mauris ullamcorper felis vitae erat.
         </p>
+        -->
     </div>
   </body>
 </html>
