--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title> About me - Nomeyho </title>
+    <title> Blog - Nomeyho </title>
     <link rel="icon" type="image/png" href="img/avatar.png" />
     <link rel="stylesheet" type="text/css" title="style" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
