--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title> Nomeyho </title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-    <link rel="stylesheet" type="text/css" title="style" href="css/modern-normalize.min.css">
     <link rel="stylesheet" type="text/css" title="style" href="css/theme.css">
-    <script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
@@ -40,19 +38,30 @@
             </a>
         </div>
 
-        <div class="section-links">
-            <a class="" href="#about">About</a> •
-            <a class="" href="#skills">Skills</a> •
-            <a class="" href="#projects">Projects</a>
-        </div>
     </header>
 
     <main>
         <!-- About -->
         <section id="about">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Hello, I'm a software engineer that loves JavaScript-related technologies. I'm 25yo, based in Belgium and I speak French (native) and English.</p>
+            <h3>Experience</h3>
+            <div class="about">
+                Software engineer <a href="https://www.arhs-group.com/">@Arhs</a> since 2017
+            </div>
+            <h3>Education</h3>
+            <div class="about">
+                <span class="date">2019</span> AWS Certified Developer - Associate
+            </div>
+            <div class="about">
+                <span class="date">2017</span> Master degree in Computer Science and Engineering (Université de Liège)
+            </div>
+            <div class="about">
+                <span class="date">2016</span> Exchange program (Università degli Studi dell'Aquila)
+            </div>
+            <div class="about">
+                <span class="date">2015</span> Bachelor degree in engineering with a focus on computer science, electricity and electronics (Université de Liège).
+            </div>
         </section>
 
         <!-- Skils -->
@@ -61,11 +70,11 @@
             <ul>
                 <li>JavaScript, NodeJS</li>
                 <li>VueJS, React, Redux</li>
-                <li>Java 8+, Spring SpringBoot</li>
+                <li>Java 8+, Spring/SpringBoot</li>
                 <li>AWS λ, DynamoDB, Cognito, S3</li>
                 <li>Flutter</li>
                 <li>SQL, Mongo, GraphQL</li>
-                <li>Git, Linux</li>
+                <li>Git, Gitlab CI/CD, Docker</li>
             </ul>
         </section>
 
@@ -74,10 +83,112 @@
             <h2>Projects</h2>
 
             <div class="project">
-                <h3>ULgSpectra</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <a class="title" href="http://www.ulgspectra.ulg.ac.be/">
+                    ULgSpectra
+                    <svg class="icon">
+                        <use xlink:href="#icon-link"></use>
+                    </svg>
+                </a>
+                <p>A spectra visualization tool for the Chemistry department of the University of Liège (Belgium).
+                </p>
                 <div class="tags">
-                    <span>TAG 1</span>, <span>TAG 2</span>
+                    <span>VueJS</span>
+                    <span>SPA</span>
+                    <span>D3</span>
+                    <span>ElementUI</span>
+                    <span>NodeJS</span>
+                    <span>C++ addon</span>
+                    <span>HapiJS</span>
+                    <span>Postgres</span>
+                </div>
+            </div>
+
+            <div class="project">
+                <a class="title" href="https://github.com/Nomeyho/mandelbrot">
+                        Mandelbrot fractal
+                        <svg class="icon">
+                            <use xlink:href="#icon-link"></use>
+                        </svg>
+                    </a>
+                <p>Simple Mandelbrot fractal renderer for the browser.</p>
+                <div class="tags">
+                    <span>HTML5</span>
+                    <span>JavaScript</span>
+                    <span>Canvas</span>
+                    <span>Web Workers</span>
+                </div>
+            </div>
+
+            <div class="project">
+                <a class="title" href="https://github.com/Nomeyho/currency">
+                            Currency
+                            <svg class="icon">
+                                <use xlink:href="#icon-link"></use>
+                            </svg>
+                        </a>
+                <p>A currency converter for iOS and Android supported by a Serverless backend hosted on AWS.
+                </p>
+                <div class="tags">
+                    <span>Flutter</span>
+                    <span>Dart</span>
+                    <span>AWS</span>
+                    <span>Lambda</span>
+                    <span>S3</span>
+                    <span>SES</span>
+                </div>
+            </div>
+
+            <div class="project">
+                <a class="title" href="https://github.com/Nomeyho/spacy">
+                            Spacy
+                            <svg class="icon">
+                                <use xlink:href="#icon-link"></use>
+                            </svg>
+                        </a>
+                <p>
+                    A jump game for Android. Jump through space, bounce on colored rings, fight gravity and beat your records.
+
+                </p>
+                <div class="tags">
+                    <span>Java 7</span>
+                    <span>Android</span>
+                    <span>Game</span>
+                    <span>LibGDX</span>
+                    <span>Box2D</span>
+                    <span>Admob</span>
+                </div>
+            </div>
+
+            <div class="project">
+                <a class="title" href="https://github.com/Nomeyho/molecular-formular-parser">
+                                Molecular formula parser
+                                <svg class="icon">
+                                    <use xlink:href="#icon-link"></use>
+                                </svg>
+                            </a>
+                <p>A molecular formula parser for Java. Implemented in Java 8 using compiler theory principles, and deployed on Maven central.
+                </p>
+                <div class="tags">
+                    <span>Java 8</span>
+                    <span>Maven</span>
+                    <span>JUnit</span>
+                </div>
+            </div>
+
+            <div class="project">
+                <a class="title" href="https://play.google.com/store/apps/details?id=be.ac.ulg.info2051.g09.chess.display">
+                        MonkeyChess
+                        <svg class="icon">
+                            <use xlink:href="#icon-link"></use>
+                        </svg>
+                    </a>
+                <p>
+                    A Chess game for Android with exotic boards, fairy pieces, 1 to 4 players, and a basic IA. Developped in a team of 3 for the course INFO2051 (ULg).
+                </p>
+                <div class="tags">
+                    <span>Java 7</span>
+                    <span>Android</span>
+                    <span>Game</span>
                 </div>
             </div>
 
@@ -85,7 +196,7 @@
     </main>
 
     <footer>
-        Nomeyho © 2020
+        Updated 01/2020
     </footer>
 
     <!-- Icons (embedded) -->
@@ -118,6 +229,9 @@
                     d="M358.4 534.733c0-79.104-2.611-145.203-5.222-202.291h184.013l9.114 88.218h3.891c25.907-41.523 89.395-102.4 195.686-102.4 129.638 0 226.918 86.784 226.918 273.51v381.030h-204.8v-351.283c0-81.613-31.078-143.872-102.4-143.872-54.374 0-81.613 44.032-95.898 80.333-5.222 13.005-6.502 31.13-6.502 49.306v365.517h-204.8v-438.067z">
                 </path>
             </symbol>
+            <symbol id="icon-link" viewBox="0 0 24 24">
+                <title>Link</title>
+                <path d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z"/>            </symbol>
         </defs>
     </svg>
 </body>
