--- a/index.html
+++ b/index.html
@@ -3,18 +3,30 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="identifier-url" content="https://nomeyho.github.io/" />
+    <meta name="title" content="Nomeyho" />
+    <meta name="description" content="Nomeyho personal website" />
+    <meta name="abstract" content="Nomeyho personal website" />
+    <meta name="keywords" content="Nomeyho, Website, Software, Engineer" />
+    <meta name="author" content="Stéphane Vanberg" />
+    <meta name="language" content="EN" />
+    <meta name="robots" content="All" />
     <title> Nomeyho </title>
-    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" type="text/css" title="style" href="css/theme.css">
 </head>
 
 <body>
+    <div id="themeSwitch">
+        <svg class="icon">
+            <use xlink:href="#icon-moon"></use>
+        </svg>
+    </div>
+
     <!-- Introduction -->
     <header>
-        <img class="avatar" alt="Stéphane Vanberg" src="img/avatar.png">
+        <img class="avatar" alt="Stéphane Vanberg" src="img/avatar.jpg">
         <h1 class="title">Stéphane Vanberg</h1>
         <h2 class="description">Software Engineer</h2>
-
         <div class="social-links">
             <a class="link" href="https://twitter.com/Nomeyho" target="_blank">
                 <svg class="icon">
@@ -47,7 +59,7 @@
             <p>Hello, I'm a software engineer that loves JavaScript-related technologies. I'm 25yo, based in Belgium and I speak French (native) and English.</p>
             <h3>Experience</h3>
             <div class="about">
-                Software engineer <a href="https://www.arhs-group.com/">@Arhs</a> since 2017
+                Software engineer <a href="https://www.arhs-group.com/" target="_blank">@Arhs</a> since 2017
             </div>
             <h3>Education</h3>
             <div class="about">
@@ -83,7 +95,7 @@
             <h2>Projects</h2>
 
             <div class="project">
-                <a class="title" href="http://www.ulgspectra.ulg.ac.be/">
+                <a class="title" href="http://www.ulgspectra.ulg.ac.be/" target="_blank">
                     ULgSpectra
                     <svg class="icon">
                         <use xlink:href="#icon-link"></use>
@@ -104,7 +116,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/mandelbrot">
+                <a class="title" href="https://github.com/Nomeyho/mandelbrot" target="_blank">
                         Mandelbrot fractal
                         <svg class="icon">
                             <use xlink:href="#icon-link"></use>
@@ -120,7 +132,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/currency">
+                <a class="title" href="https://github.com/Nomeyho/currency" target="_blank">
                             Currency
                             <svg class="icon">
                                 <use xlink:href="#icon-link"></use>
@@ -139,7 +151,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/spacy">
+                <a class="title" href="https://github.com/Nomeyho/spacy" target="_blank">
                             Spacy
                             <svg class="icon">
                                 <use xlink:href="#icon-link"></use>
@@ -160,7 +172,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/molecular-formular-parser">
+                <a class="title" href="https://github.com/Nomeyho/molecular-formular-parser" target="_blank">
                                 Molecular formula parser
                                 <svg class="icon">
                                     <use xlink:href="#icon-link"></use>
@@ -176,7 +188,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://play.google.com/store/apps/details?id=be.ac.ulg.info2051.g09.chess.display">
+                <a class="title" href="https://play.google.com/store/apps/details?id=be.ac.ulg.info2051.g09.chess.display" target="_blank">
                         MonkeyChess
                         <svg class="icon">
                             <use xlink:href="#icon-link"></use>
@@ -200,7 +212,7 @@
     </footer>
 
     <!-- Icons (embedded) -->
-    <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" target="_blank">
         <defs>
             <symbol id="icon-twitter" viewBox="0 0 1024 1024">
                 <title>Twitter</title>
@@ -231,9 +243,47 @@
             </symbol>
             <symbol id="icon-link" viewBox="0 0 24 24">
                 <title>Link</title>
-                <path d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z"/>            </symbol>
+                <path d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z"/>
+            </symbol>
+            <symbol id="icon-moon" viewBox="0 0 512 512">
+                <title>Moon</title>
+                <path d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"/>
+            </symbol>
+            <symbol id="icon-sun" viewBox="0 0 64 64">
+                <title>Sun</title>
+                <path d="M17,31.9727993c0,8.295599,6.7157001,15.0206013,15,15.0206013s15-6.7250023,15-15.0206013 c0-8.2957001-6.7157021-15.0206985-15-15.0206985S17,23.6770992,17,31.9727993z M45,31.9727993 c0,7.1779995-5.8317986,13.0178013-13,13.0178013c-7.1681843,0-13-5.8398018-13-13.0178013 c0-7.1780987,5.8318157-13.0178986,13-13.0178986C39.1682014,18.9549007,45,24.7947006,45,31.9727993z"/>
+                <path d="M32.7421989,11.7700996c0.5527,0,1-0.4478998,1-1.0014V1.0014c0-0.5535-0.4473-1.0014-1-1.0014 c-0.5527992,0-0.9999981,0.4479-0.9999981,1.0014v9.7672997C31.7422009,11.3221998,32.1893997,11.7700996,32.7421989,11.7700996z" />
+                <path d="M48.6445007,4.6588001C48.1640015,4.3790998,47.5527,4.5443001,47.2783012,5.0235l-4.8838005,8.4578991 c-0.2773018,0.4792004-0.1133003,1.0914001,0.364315,1.3681002c0.1581841,0.0918999,0.3300858,0.1350002,0.5,0.1350002 c0.3456841,0,0.6815834-0.1789999,0.8661842-0.4996996l4.8838158-8.4580002 C49.2860985,5.5476999,49.1221008,4.9355001,48.6445007,4.6588001z"/>
+                <path d="M50.7616997,23.0286999c0.1689987,0,0.3408012-0.0429993,0.4990005-0.1340008l8.4580002-4.8835983 c0.4776001-0.2758007,0.6425972-0.8889008,0.3661995-1.3681011c-0.2763023-0.4771996-0.8837013-0.6434994-1.3661995-0.3666992 l-8.4580002,4.8836002c-0.4775009,0.2757988-0.6425018,0.8889999-0.3661995,1.3680992  C50.0790977,22.8488007,50.4160004,23.0286999,50.7616997,23.0286999z"/>
+                <path d="M11.7676001,32.7421989c0-0.5533981-0.4473-1.0012989-0.999999-1.0012989H1.0000008c-0.5527,0-1,0.4479008-1,1.0012989 c0,0.5535011,0.4473,1.0014,1,1.0014h9.7676001C11.3203001,33.7435989,11.7676001,33.2957001,11.7676001,32.7421989z"/>
+                <path d="M4.2822008,18.0111008L12.7402,22.8946991c0.1582003,0.0910015,0.3291006,0.1340008,0.4990005,0.1340008  c0.3457003,0,0.6827002-0.1798992,0.8671999-0.5007c0.2764149-0.4790993,0.1114149-1.0923004-0.3662004-1.3680992 l-8.4579992-4.8836002c-0.4813852-0.2768002-1.0918002-0.1125011-1.3662002,0.3666992 C3.6396008,17.1222,3.8047006,17.7353001,4.2822008,18.0111008z"/>
+                <path d="M20.7411995,14.9844999c0.1699009,0,0.3418007-0.0431004,0.4990005-0.1339998 c0.4785004-0.2777004,0.6426163-0.8899002,0.3661995-1.3681002l-4.8827991-8.4579 c-0.2772999-0.4801998-0.8895998-0.6444001-1.3661995-0.3666997c-0.4785004,0.2776999-0.6425858,0.8898997-0.3662004,1.3680997 l4.8828001,8.4579C20.0596008,14.8055,20.3955002,14.9844999,20.7411995,14.9844999z"/>
+                <path d="M32.7421989,52.2318993c-0.5527992,0-0.9999981,0.4478989-0.9999981,1.0014V62.9986 c0,0.5535011,0.4471989,1.0014,0.9999981,1.0014c0.5527,0,1-0.4478989,1-1.0014v-9.7653008 C33.7421989,52.6797981,33.294899,52.2318993,32.7421989,52.2318993z"/>
+                <path d="M22.5272999,49.8936996c-0.4813995-0.2795982-1.0907993-0.114399-1.3661995,0.3647995l-4.8838005,8.457901 C16,59.1955986,16.1639996,59.8077011,16.6415997,60.0844994c0.1582165,0.0918999,0.330101,0.1348991,0.5,0.1348991 c0.3457012,0,0.6816006-0.1788979,0.8662167-0.4996986l4.8837833-8.457901 C23.1688995,50.7826004,23.0049,50.1705017,22.5272999,49.8936996z"/>
+                <path d="M13.4824009,42.3922005l-8.4580002,4.8837013c-0.4775,0.2756996-0.6425853,0.8888969-0.3662,1.3680992 c0.1846147,0.3206978,0.5215001,0.5006981,0.8671999,0.5006981c0.1689,0,0.3407998-0.0430984,0.4990001-0.1339989 l8.4580002-4.8837013c0.4775-0.2756996,0.6425991-0.8889008,0.3661995-1.3680992 C14.5732002,42.2807007,13.9639006,42.1144981,13.4824009,42.3922005z"/>
+                <path d="M63,31.7409h-9.7656021c-0.5527992,0-1,0.4479008-1,1.0012989c0,0.5535011,0.4472008,1.0014,1,1.0014H63 c0.5527,0,1-0.4478989,1-1.0014C64,32.1888008,63.5527,31.7409,63,31.7409z"/>
+                <path d="M58.9756012,47.2759018l-8.4580002-4.8837013c-0.4805031-0.2766991-1.0917854-0.1114998-1.3662033,0.3666992 c-0.2763977,0.4791985-0.1113968,1.0923996,0.3662033,1.3680992l8.4580002,4.8837013 c0.1582146,0.0909004,0.3290977,0.1339989,0.4989967,0.1339989c0.3457031,0,0.6826019-0.1800003,0.867218-0.5006981 C59.6181984,48.1647987,59.4530983,47.5516014,58.9756012,47.2759018z"/>
+                <path d="M42.8378983,50.2584991c-0.2753983-0.4791985-0.8866997-0.6443977-1.3661995-0.3647995 c-0.4776001,0.2768021-0.6415977,0.8889008-0.3642998,1.3680992l4.8838005,8.457901 c0.1846161,0.3208008,0.5205002,0.4996986,0.8661995,0.4996986c0.169899,0,0.3418007-0.0429993,0.5-0.1348991 c0.4775009-0.2767982,0.6416016-0.8889008,0.3642998-1.3680992L42.8378983,50.2584991z"/>
+            </symbol>
         </defs>
     </svg>
 </body>
+
+<script>
+    var useDarkTheme = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+    var themeSwitch = document.getElementById('themeSwitch');
+
+    themeSwitch.addEventListener('click', function() {
+        if (useDarkTheme) {
+            useDarkTheme = false;
+            document.body.removeAttribute('data-theme');
+            themeSwitch.getElementsByTagName('use')[0].setAttribute('xlink:href', '#icon-moon');
+        } else {
+            useDarkTheme = true;
+            document.body.setAttribute('data-theme', 'dark');
+            themeSwitch.getElementsByTagName('use')[0].setAttribute('xlink:href', '#icon-sun');
+        }
+    });
+</script>
 
 </html>
