Optimize image size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
     <!-- Introduction -->
     <header>
-        <img class="avatar" alt="Stéphane Vanberg" src="img/avatar.jpg">
+        <picture>
+            <source srcset="img/avatar_125.webp" type="image/webp">
+            <source srcset="img/avatar_125.png" type="image/png">
+            <img class="avatar" alt="Stéphane Vanberg" src="img/avatar_125.png">
+        </picture>
+
         <h1 class="title">Stéphane Vanberg</h1>
         <h2 class="description">Software Engineer</h2>
         <div class="social-links">
