Fix lighthouse issues

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="identifier-url" content="https://nomeyho.github.io/" />
     <meta name="title" content="Nomeyho" />
     <meta name="description" content="Nomeyho personal website" />
@@ -17,7 +18,6 @@
             --color-background: #ffffff;
             --color-link: #0366d6;
             --color-text: #666;
-            --color-text-secondary: #aaa;
             --color-title: #222;
             --color-border: #ededed;
             --color-tag-background: #0366d6;
@@ -28,7 +28,6 @@
             --color-background: #1A191E;
             --color-link: #0366d6;
             --color-text: #b3b3b3;
-            --color-text-secondary: #aaa;
             --color-title: white;
             --color-border: #666;
             --color-tag-background: #0366d6;
@@ -115,7 +114,7 @@
         header .description {
             font-size: 1.1rem;
             font-weight: 300;
-            color: var(--color-text-secondary);
+            color: var(--color-text);
             margin: 0 0 30px
         }
         
@@ -212,7 +211,7 @@
         /* Footer */
         
         footer {
-            color: var(--color-text-secondary);
+            color: var(--color-text);
             font-size: 0.8rem;
             text-align: center;
             padding: 20px 0;
@@ -238,22 +237,22 @@
         <h1 class="title">Stéphane Vanberg</h1>
         <h2 class="description">Software Engineer</h2>
         <div class="social-links">
-            <a class="link" href="https://twitter.com/Nomeyho" target="_blank">
+            <a class="link" href="https://twitter.com/Nomeyho" target="_blank" rel="noopener" aria-label="Link to my twitter">
                 <svg class="icon">
                     <use xlink:href="#icon-twitter"></use>
                 </svg>
             </a>
-            <a class="link" href="https://www.linkedin.com/in/st%C3%A9phane-vanberg-7b050a178/" target="_blank">
+            <a class="link" href="https://www.linkedin.com/in/st%C3%A9phane-vanberg-7b050a178/" target="_blank" rel="noopener" aria-label="Link to my Linkedin">
                 <svg class="icon">
                     <use xlink:href="#icon-linkedin"></use>
                 </svg>
             </a>
-            <a class="link" href="https://github.com/Nomeyho" target="_blank">
+            <a class="link" href="https://github.com/Nomeyho" target="_blank" rel="noopener" aria-label="Link to my Github">
                 <svg class="icon">
                     <use xlink:href="#icon-github"></use>
                 </svg>
             </a>
-            <a class="link" href="mailto:vanbergstephane@gmail.com">
+            <a class="link" href="mailto:vanbergstephane@gmail.com" aria-label="Link to my email">
                 <svg class="icon">
                     <use xlink:href="#icon-mail"></use>
                 </svg>
@@ -269,7 +268,7 @@
             <p>Hello, I'm a software engineer that loves JavaScript-related technologies. I'm 25yo, based in Belgium and I speak French (native) and English.</p>
             <h3>Experience</h3>
             <div class="about">
-                Software engineer <a href="https://www.arhs-group.com/" target="_blank">@Arhs</a> since 2017
+                Software engineer <a href="https://www.arhs-group.com/" target="_blank" rel="noopener">@Arhs</a> since 2017
             </div>
             <h3>Education</h3>
             <div class="about">
@@ -305,7 +304,7 @@
             <h2>Projects</h2>
 
             <div class="project">
-                <a class="title" href="http://www.ulgspectra.ulg.ac.be/" target="_blank">
+                <a class="title" href="http://www.ulgspectra.ulg.ac.be/" target="_blank" rel="noopener">
                     ULgSpectra
                     <svg class="icon">
                         <use xlink:href="#icon-link"></use>
@@ -326,7 +325,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/mandelbrot" target="_blank">
+                <a class="title" href="https://github.com/Nomeyho/mandelbrot" target="_blank" rel="noopener">
                         Mandelbrot fractal
                         <svg class="icon">
                             <use xlink:href="#icon-link"></use>
@@ -342,7 +341,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/currency" target="_blank">
+                <a class="title" href="https://github.com/Nomeyho/currency" target="_blank" rel="noopener">
                             Currency
                             <svg class="icon">
                                 <use xlink:href="#icon-link"></use>
@@ -361,7 +360,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/spacy" target="_blank">
+                <a class="title" href="https://github.com/Nomeyho/spacy" target="_blank" rel="noopener">
                             Spacy
                             <svg class="icon">
                                 <use xlink:href="#icon-link"></use>
@@ -382,7 +381,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://github.com/Nomeyho/molecular-formular-parser" target="_blank">
+                <a class="title" href="https://github.com/Nomeyho/molecular-formular-parser" target="_blank" rel="noopener">
                                 Molecular formula parser
                                 <svg class="icon">
                                     <use xlink:href="#icon-link"></use>
@@ -398,7 +397,7 @@
             </div>
 
             <div class="project">
-                <a class="title" href="https://play.google.com/store/apps/details?id=be.ac.ulg.info2051.g09.chess.display" target="_blank">
+                <a class="title" href="https://play.google.com/store/apps/details?id=be.ac.ulg.info2051.g09.chess.display" target="_blank" rel="noopener">
                         MonkeyChess
                         <svg class="icon">
                             <use xlink:href="#icon-link"></use>
@@ -422,7 +421,7 @@
     </footer>
 
     <!-- Icons (embedded) -->
-    <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" target="_blank">
+    <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" target="_blank" rel="noopener">
         <defs>
             <symbol id="icon-twitter" viewBox="0 0 1024 1024">
                 <title>Twitter</title>
