Added service worker

--- a/index.html
+++ b/index.html
@@ -479,6 +479,18 @@
 </body>
 
 <script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js', {
+                scope: '/'
+            })
+            .then(function(registration) {
+                console.log('Service Worker Registered');
+            });
+        navigator.serviceWorker.ready.then(function(registration) {
+            console.log('Service Worker Ready');
+        });
+    }
+
     var useDarkTheme = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
     var themeSwitch = document.getElementById('themeSwitch');
 
