--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             border-radius: 0.8rem;
             margin-right: 0.2rem;
             margin-bottom: 0.2rem;
+            display: inline-block;
         }
         /* Footer */
         
