--- a/index.html
+++ b/index.html
@@ -268,14 +268,25 @@
         <section id="about">
             <h2>About</h2>
             <p>Hello, I'm a software engineer that loves JavaScript-related technologies. I'm 25yo, based in Belgium and I speak French (native) and English.</p>
+
             <h3>Experience</h3>
             <div class="about">
-                Software engineer <a href="https://www.arhs-group.com/" target="_blank" rel="noopener">@Arhs</a> since 2017
+                <span class="date">2017 - now</span> Software engineer <a href="https://www.arhs-group.com/" target="_blank" rel="noopener">@Arhs</a>
             </div>
-            <h3>Education</h3>
+            <div class="about">
+                <span class="date">2017 - now</span> Scientific colaborator of the Université de Liège (maintenance and evolution of ULgSpectra)
+            </div>
+
+            <h3>Certification</h3>
+            <div class="about">
+                <span class="date">2020</span>
+                <a href="https://www.credential.net/983c3cf3-1fef-4e7f-bb23-e98d9ba22585?key=a0bc7f75ae239aa09f724118b34e48cbb30e08fdd4e39333cb815e906b154292">Flutter Clock Challenge</a>
+            </div>
             <div class="about">
                 <span class="date">2019</span> AWS Certified Developer - Associate
             </div>
+
+            <h3>Education</h3>
             <div class="about">
                 <span class="date">2017</span> Master degree in Computer Science and Engineering (Université de Liège)
             </div>
